--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ p {
     margin-right: auto;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .new_edition h1 {
@@ -185,6 +185,20 @@ p {
     text-decoration: none;
     width: 18em;
     border: 0px grey solid;
+    
+}
+
+#button3 {
+    background-color: white;
+    font-weight: bold;
+    color:black !important;
+    height: 5em;
+    line-height: 1.5em;
+    text-decoration: none;
+    width: 18em;
+    border: 0px grey solid;
+    margin-left: 15em;
+   
     
 }
 
