--- a/css/header2.css
+++ b/css/header2.css
@@ -35,7 +35,8 @@ nav input[type= checkbox]{
 
 nav{
   width:100%;
-  background-color: #424558;
+  /*background-color: #424558;*/
+  background-color: white;
 }
 
 nav > ul::after{
@@ -51,7 +52,8 @@ nav  a{
 
 nav > ul > li > a{
   padding: 20px 30px;
-  color:#FFF;
+  /*color:#FFF;*/
+  color:#000;
 }
 
 nav li:hover .sousmenu{
@@ -79,7 +81,7 @@ border-top:5px solid #e44d26;
 background-color:RGBa(228,77,38,0.15);
 }
 .menu-inscription:hover{
-  border-top:5px solid #0070bb;
+  border-top:5px solid #e44d26;
   background-color:RGBa(000,112,192,0.15);
 }
 .menu-logo:hover{
