--- a/css/header2.css
+++ b/css/header2.css
@@ -35,8 +35,7 @@ nav input[type= checkbox]{
 
 nav{
   width:100%;
-  /*background-color: #424558;*/
-  background-color: white;
+  background-color: #FFF;
 }
 
 nav > ul::after{
@@ -52,7 +51,6 @@ nav  a{
 
 nav > ul > li > a{
   padding: 20px 30px;
-  /*color:#FFF;*/
   color:#000;
 }
 
@@ -78,15 +76,15 @@ width:270px;
 
 .menu-home:hover{
 border-top:5px solid #e44d26;
-background-color:RGBa(228,77,38,0.15);
+background-color:RGBa(220,220,220,0.15);
 }
 .menu-inscription:hover{
   border-top:5px solid #e44d26;
-  background-color:RGBa(000,112,192,0.15);
+  background-color:RGBa(220,220,220,0.15);
 }
 .menu-logo:hover{
   border-top:5px solid #e44d26;
-  background-color:RGBa(241,211,79,0.15);
+  background-color:RGBa(220,220,220,0.15);
 }
 .menu-contact:hover{
   border-top:5px solid #e44d26;
@@ -94,7 +92,7 @@ background-color:RGBa(228,77,38,0.15);
 }
 .menu-faq:hover{
   border-top:5px solid #e44d26;
-  background-color:RGBa(228,77,38,0.15);
+  background-color:RGBa(220,220,220,0.15);
 }
 
 nav ul li:hover a{
@@ -102,7 +100,7 @@ nav ul li:hover a{
 }
 
 .menu-inscription .sousmenu{
-  background-color: RGB(230, 100, 40);
+  background-color: transparent;
 }
 
 .sousmenu li:hover a{
@@ -156,9 +154,9 @@ nav input[type=checkbox]:checked ~ ul{
   position:absolute;
   margin-left: -3.5em;
   margin-top: -0.8em;
-  -ms-transform: rotate(-3deg); /* IE 9 */
-  -webkit-transform: rotate(-3deg); /* Safari 3-8 */
-  transform: rotate(-3deg);
+  -ms-transform: rotate(-5deg); /* IE 9 */
+  -webkit-transform: rotate(-5deg); /* Safari 3-8 */
+  transform: rotate(-5deg);
 }
   
 
