--- a/css/style.css
+++ b/css/style.css
@@ -12,38 +12,15 @@
         font-family:'cookit-regular-webfont', sans-serif;
         font-size:3em;
         }
-       /* * {
-            line-height: 1.5!important;
-            letter-spacing:.12em!important;
-            word-spacing: .16em !important;
-        }*/
-
-        *{
-
-            margin:0;
-            
-            padding:0;
-            
-            }
+        
 html {
     font-family:'cookit-regular-webfont';
-    height:100%;
 }
-
-*{
-
-    margin:0;
-    
-    padding:0;
-    
-    }
-
 
 body {
     position: relative;
-    text-align:center;
+
     min-height: 100%;
-    height:100%;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
@@ -208,7 +185,7 @@ p {
     text-decoration: none;
     width: 18em;
     border: 0px grey solid;
-    align-items: baseline;
+    margin-right: 5em;
 }
 
 #button3 {
@@ -220,7 +197,7 @@ p {
     text-decoration: none;
     width: 18em;
     border: 0px grey solid;
-    
+    margin-left: 10em;
    
     
 }
@@ -294,6 +271,7 @@ p {
     margin-left: 2em;
     margin-right: 2em;
     border-radius: 5px;
+    
 }
 
 .anciennephoto p {
@@ -336,11 +314,9 @@ p {
 
 .temoignages p {
     color: white;
-    padding-bottom: 2em;
+    padding-bottom: 1em;
 }
-.card-body{
-    height:auto;
-}
+
 
 #carouselTemoignages {
     height: 18vh;
