--- a/css/galerie.css
+++ b/css/galerie.css
@@ -10,12 +10,12 @@
     
     }
 
-h1 {
-        /*font-family: 'cookitregular';*/
-        font-size: 4em;
+/*h1 {
+        font-family: 'cookitregular';*/
+      /*  font-size: 4em;
         padding-top:2em;
         line-height: 4em;
-}
+}*/
 
 html {
         height: 100%;
