--- a/caroloexpress/public/css/admin.css
+++ b/caroloexpress/public/css/admin.css
@@ -2,15 +2,15 @@
 
 body {
 
-    background:  url(../img/eclair.png) no-repeat center/65% ,
+    background:  url(../img/fond.jpg) ,
 
-     url(../img/logoetudiantcarolo.png) no-repeat right/20% ,
+    /* url(../img/logoetudiant.png) no-repeat right/20% ,
 
-     url(../img/superhero2017.png) no-repeat left/35% ;
+     url(../img/superhero2017.png) no-repeat left/35% ;*/
 
     /*background-size: 65%;*/
 
-     width:auto; 
+     /*width: auto; */
 
   }
 
@@ -26,7 +26,7 @@ body {
 
       padding: 1em;
 
-      border: 2px solid rgb(233, 95, 16);
+      border: 5px solid black;
 
       border-radius: 1em;
 
@@ -42,7 +42,7 @@ body {
 
     
 
-    label {
+    .form label {
 
       /* Pour être sûrs que toutes les étiquettes ont même taille et sont correctement alignées */
 
@@ -56,7 +56,7 @@ body {
 
     
 
-    select {
+    .form select {
 
       /* Pour s'assurer que tous les champs texte ont la même police.
 
@@ -78,13 +78,13 @@ body {
 
       /* Pour harmoniser le look & feel des bordures des champs texte */
 
-      border: 3px solid rgb(233, 95, 16);
+      border: 5px solid rgb(233, 95, 16);
 
     }
 
     
 
-    select:focus {
+    .form select:focus {
 
       /* Pour souligner légèrement les éléments actifs */
 
@@ -94,7 +94,7 @@ body {
 
   
 
-    input {
+    .form input {
 
       /* Pour s'assurer que tous les champs texte ont la même police.
 
@@ -116,13 +116,13 @@ body {
 
       /* Pour harmoniser le look & feel des bordures des champs texte */
 
-      border: 3px solid rgb(233, 95, 16);
+      border: 5px solid black;
 
     }
 
     
 
-    input:focus {
+    .form input:focus {
 
       /* Pour souligner légèrement les éléments actifs */
 
@@ -142,7 +142,7 @@ body {
 
     
 
-    button {
+    .form button {
 
       /* Cette marge supplémentaire représente grosso modo le même espace que celui
 
